# ROS2-OpenMVRT1062-Robot-main

./: .gitattributes  .gitignore  README.md  docker-compose.yml  entrypoint.sh  project_roadmap.md  ros2.Dockerfile  setup_udev_rules.sh  setup_vila.sh
maps/: .gitkeep
robot_control/: setup.py
robot_control/launch/: robot_system.launch.py
robot_control/robot_control/: camera_receiver.py  robot_control_node.py
src/jetson_bot_slam/: README.md  package.xml  setup.cfg  setup.py
src/jetson_bot_slam/config/: mapper_params_online_async.yaml  nav2_params.yaml  vila_params.yaml
src/jetson_bot_slam/jetson_bot_slam/: __init__.py  arduino_bridge_node.py  mecanum_odometry_node.py  motor_driver_node.py  roboclaw_driver.py  roboclaw_node.py  vila_scene_labeller_node.py
src/jetson_bot_slam/launch/: ai_slam_explore.launch.py  explore.launch.py  robot_bringup.launch.py  slam.launch.py
src/jetson_bot_slam/resource/: jetson_bot_slam
src/jetson_bot_slam/rviz/: slam_view.rviz
src/jetson_bot_slam/urdf/: jetson_bot.urdf.xacro
src/robot_control/: package.xml  setup.py
src/robot_control/launch/: ai_exploration.launch.py  slam_ai_explore.launch.py
src/robot_control/robot_control/: ai_navigator.py  camera_receiver.py  exploration_controller.py  frontier_explorer.py  llm_planner.py  robot_control_node.py  slam_receiver.py  usb_camera_node.py
